--- a/style.css
+++ b/style.css
@@ -1,16 +1,38 @@
+@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@500&family=Montserrat:wght@500&display=swap');
+
 * {
   list-style: none;
 }
 
 body {
+  margin: 0;
+  padding: 0;
   display: grid;
   grid-template-rows: 1fr 5fr;
-  grid-template-columns: 1fr 5fr;
+  grid-template-columns: 1fr 3fr;
+  font-family: 'Montserrat', sans-serif;
 }
 
-#dashboard {
+#sidebar {
   grid-column: 1 / 2;
   grid-row: 1 / 3;
+  background-color: #6d28d9;
+  color: #fefce8;
+}
+
+#dashboard > h1 {
+  padding: 20px;
+  font-size: 30px;
+}
+
+#dashboard nav {
+  display: grid;
+  gap: 20px;
+}
+
+#dashboard nav ul {
+  display: grid;
+  gap: 5px;
 }
 
 #topbar {
