--- a/style.css
+++ b/style.css
@@ -4,12 +4,22 @@
   list-style: none;
 }
 
+@media (max-width: 600px) {
+  body {
+    grid-template-columns: 1fr;
+  }
+
+  #sidebar {
+    display: none;
+  }
+}
+
 body {
   margin: 0;
   padding: 0;
   display: grid;
   grid-template-rows: 1fr 5fr;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 300px 3fr;
   font-family: 'Montserrat', sans-serif;
 }
 
