--- a/style.css
+++ b/style.css
@@ -77,10 +77,18 @@ body {
   box-shadow: 0px 3px 6px 1px #94a3b8;
 }
 
+#topbar img {
+  height: 100%;
+  width: 30px;
+}
+
 search {
   grid-row: 1 / 2;
   grid-column: 1 / 2;
   align-self: center;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 search input {
