--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   padding: 0;
   display: grid;
   grid-template-rows: 200px 5fr;
-  grid-template-columns: 300px 3fr;
+  grid-template-columns: 250px 3fr;
   font-family: 'Montserrat', sans-serif;
 }
 
@@ -25,7 +25,7 @@ body {
 }
 
 #dashboard h1 {
-  font-size: 30px;
+  font-size: 25px;
 }
 
 #dashboard nav {
@@ -42,13 +42,13 @@ body {
   display: flex;
   align-items: center;
   padding: 20px;
-  gap: 20px;
+  gap: 10px;
   color: white
 }
 
 .iconContainer img {
   height: 100%;
-  width: 60px;
+  width: 40px;
   filter: invert(1);
 }
 
@@ -56,13 +56,13 @@ body {
   display: flex;
   gap: 20px;
   align-items: center;
-  font-size: 22px;
+  font-size: 18px;
   font-weight: 600;
 }
 
 #dashboard li img {
   height: 100%;
-  width: 25px;
+  width: 20px;
   filter: invert(1);
 }
 
@@ -75,6 +75,8 @@ body {
   padding: 30px;
   row-gap: 40px;
   box-shadow: 0px 3px 6px 1px #94a3b8;
+  position: relative;
+  z-index: 100;
 }
 
 #topbar img {
@@ -179,34 +181,141 @@ main {
   grid-row: 2 / 3;
   grid-column: 2 / 3;
   display: grid;
-  grid-template-columns: 3fr 1fr;
+  grid-template-columns: 1fr 300px;
   grid-template-rows: 1fr 1fr;
-}
-
-
-#announcements {
-  grid-row: 1 / 2;
-  grid-column: 2 / 3;
-}
-
-#trending {
-  grid-row: 2 / 3;
-  grid-column: 2 / 3;
+  background-color: #ede9fe;
+  position: relative;
+  z-index: 10;
+  padding: 20px;
+  gap: 20px;
 }
 
 #projectList {
   grid-row: 1 / 3;
   grid-column: 1 / 2;
+  margin: 0;
+  padding: 0;
+}
+
+#projectList h3 {
+  margin: 10px;
+  font-size: 20px;
 }
 
 #projectsContainer {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 20px;
 }
 
 .project {
-  border: 1px solid blue;
+  padding: 20px;
+  border-radius: 12px;
+  border-left: 10px solid  #f9c709;
+  background-color: white;
+  box-shadow: 0px 3px 6px 1px #94a3b8;
+  position: relative;
+  z-index: 100;
+  height: 160px;
+}
+
+.project h4 {
+ font-size: 20px;
+}
+
+.project p {
+  font-size: 14px;
+  color: #111827;
+
+}
+
+#announcements h3 {
+  margin: 10px;
+  font-size: 20px;
+}
+
+#announcementsContainer {
+  grid-row: 1 / 2;
+  grid-column: 2 / 3;
+  padding: 40px 30px;
+  border-radius: 12px;
+  background-color: white;
+  box-shadow: 0px 3px 6px 1px #94a3b8;
+  position: relative;
+  z-index: 100;
+}
+
+#announcementsContainer hr {
+  margin: 20px 0 20px 0;
+}
+
+#trending {
+  grid-row: 2 / 3;
+  grid-column: 2 / 3;
+  margin-top: 20px;
+}
+
+#trendingContainer {
+  padding: 30px;
+  border-radius: 12px;
+  background-color: white;
+  box-shadow: 0px 3px 6px 1px #94a3b8;
+  position: relative;
+  z-index: 100;
+  display: grid;
+  gap: 10px;
+}
+
+.profilePage figure {
+  margin: 0;
+  display: grid;
+  grid-template-columns: 50px 1fr;
+  grid-template-rows: 20px 20px;
+  align-items: center;
+  column-gap: 10px;
+  row-gap: 10px;
+}
+
+.profilePage img {
+  grid-row: 1 / 3;
+  grid-column: 1 / 2;
+  height: auto;
+  width: 60px;
+  justify-self: end;
+
+}
+
+.profilePage .profileName {
+  grid-row: 1 / 2;
+  grid-column: 2 / 3;
+  font-size: 18px;
+  font-weight: bold;
+  align-self: flex-end;
+}
+
+.profilePage .profileDescription {
+  grid-row: 2 / 3;
+  grid-column: 2 / 3;
+  font-size: 14px;
+  align-self: flex-start;
+}
+
+.announcement h4 {
+  font-size: 18px;
+}
+
+.announcement p {
+  font-size: 14px;
+}
+
+h3, h4, p {
+  margin: 0;
+  padding: 0;
+}
+
+h3 {
+  font-size: 20px;
+  margin: 10px;
 }
 
 @media (max-width: 600px) {
