--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 * {
   list-style: none;
+  border: 1px solid red;
 }
 
 html {
@@ -56,7 +57,7 @@ body {
   display: flex;
   gap: 20px;
   align-items: center;
-  font-size: 18px;
+  font-size: 20px;
   font-weight: 600;
 }
 
@@ -94,7 +95,7 @@ search {
 }
 
 search input {
-  width: min(90%, 800px);
+  width: clamp(100px, 90%, 800px);
   background-color: #ddd6fe;
   border: 1px solid #ddd6fe;
   height: 30px;
@@ -181,7 +182,7 @@ main {
   grid-row: 2 / 3;
   grid-column: 2 / 3;
   display: grid;
-  grid-template-columns: 1fr 300px;
+  grid-template-columns: 4fr 450px;
   grid-template-rows: 1fr 1fr;
   background-color: #ede9fe;
   position: relative;
@@ -199,39 +200,57 @@ main {
 
 #projectList h3 {
   margin: 10px;
-  font-size: 20px;
+  font-size: 30px;
 }
 
 #projectsContainer {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   gap: 20px;
 }
 
 .project {
-  padding: 20px;
+  padding: 30px;
   border-radius: 12px;
   border-left: 10px solid  #f9c709;
   background-color: white;
   box-shadow: 0px 3px 6px 1px #94a3b8;
   position: relative;
   z-index: 100;
-  height: 160px;
+  min-height: 300px;
+  display: flex;
+  flex-direction: column;
 }
 
 .project h4 {
- font-size: 20px;
+ font-size: 30px;
+  margin: 10px 0;
 }
 
 .project p {
-  font-size: 14px;
+  font-size: 20px;
   color: #111827;
 
 }
 
+.projectIconsContainer {
+  align-self: flex-end;
+  justify-self: flex-end;
+  display: flex;
+  height: 100%;
+  gap: 20px;
+}
+
+.projectIconsContainer img {
+  height: 100%;
+  width: 40px;
+  align-self: end;
+  justify-self: end;
+}
+
 #announcements h3 {
   margin: 10px;
-  font-size: 20px;
+  font-size: 30px;
 }
 
 #announcementsContainer {
@@ -288,7 +307,7 @@ main {
 .profilePage .profileName {
   grid-row: 1 / 2;
   grid-column: 2 / 3;
-  font-size: 18px;
+  font-size: 22px;
   font-weight: bold;
   align-self: flex-end;
 }
@@ -296,16 +315,16 @@ main {
 .profilePage .profileDescription {
   grid-row: 2 / 3;
   grid-column: 2 / 3;
-  font-size: 14px;
+  font-size: 20px;
   align-self: flex-start;
 }
 
 .announcement h4 {
-  font-size: 18px;
+  font-size: 30px;
 }
 
 .announcement p {
-  font-size: 14px;
+  font-size: 20px;
 }
 
 h3, h4, p {
@@ -314,7 +333,7 @@ h3, h4, p {
 }
 
 h3 {
-  font-size: 20px;
+  font-size: 30px;
   margin: 10px;
 }
 
